# vibe-tracing

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  CMakeLists.txt  DEVELOPMENT.md  FAQ.md  INDEX.md  INSTALL.md  Makefile  PRESENTATION.md  PROJECT_COMPLETE.txt  README.md  START_HERE.md  STRUCTURE.md  SUMMARY.md  build.bat  build.sh  camera.c  camera.h  compute_shader.h  config.h  display.frag  display.vert  graphics.c  graphics.h  main.c  main_simple.c  math.c  math.h  quickstart.bat  quickstart.sh  raytrace.comp  raytracer.c  raytracer.h  scene.c  scene.h  scenes.h  thread_pool.c  thread_pool.h  ui.c  (+2 more)
